
<!-- Strings in english -->
<resources>

    <string name="idiomaApp">english</string>
    
    <string name="app_name">Virtual Training Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_trainning">VTA - Training</string>
    <string name="title_activity_ajustes">VTA - Settings</string>
    <string name="title_activity_resumen">VTA - Summary</string>
    <string name="title_activity_results">VTA - Results</string>
    <string name="title_activity_about">VTA - About V-Training Assistant</string>
    
    <string name="menuExit">Exit</string>
    <string name="menuCredits">About</string>
    <string name="menuAjustes">Settings</string>
    <string name="menuResumen">Training Summary</string>
    <string name="menuTraining">To Train!</string>
    
    <string name="txtViewSummary">Summary of previous trainings:</string>
    <string name="txtViewDuracion">Duration</string>
    <string name="txtViewDistancia">Distance (Km)</string>
    <string name="txtViewActividad">Activity</string>
    <string name="txtViewPulso">Resting heart rate</string>
    <string name="timerVal">00:00</string>
    
    <string name="ActivRunning">Running</string>
    <string name="ActivCycling">Cycling</string>
    
    <string name="txtViewNombre">Name</string>
    <string name="txtViewPeso">Weight</string>
    <string name="txtViewEstatura">Height</string>
    <string name="txtViewEdad">Age</string>
    <string name="txtViewUnidLongitud">km</string>
    <string name="txtViewUnidPeso">Kg</string>
    
    <string name="txtViewHola">Hi</string>
    <string name="txtViewTuActividad">Your activity: </string>
    <string name="txtViewCalQuemadas">Burned calories:</string>
    <string name="txtViewDistRecorrida">Distance:</string>
    <string name="txtViewTiempo">Training time:</string>
    <string name="txtViewFrecOptima">Optimal heart rate:</string>
    
    <string name="txtVelocidad">Speed (km/h)</string>
    <string name="txtTiempo">Time</string>
    <string name="txtGrafVelocidad">Speed Graphics</string>
    <string name="txtFecha">Date</string>
    <string name="txtCalorias">Burned Calories</string>
    <string name="txtDistancia">Distance</string>
    
    <string name="msgNoGPS">"GPS is disabled or it can't obtain the location.\nVerify the service."</string>
    <string name="msgNoAjustes">You must verify de training settings before to start it.</string>
    <string name="msgSalir">Do you want to quit of the training?</string>
    <string name="msgAjustes">Some information is empty. Please complete it all for a better app working.</string>
    <string name="msgErrorEdad">The age is not a valid number</string>
    <string name="msgErrorPeso">The weight is not a valid number</string>
    <string name="msgErrorEstatura">The height is not a valid number</string>
    <string name="msgErrorPulso">The heart rate is not a valid number</string>
    <string name="msgCompartir">Share results</string>
    <string name="msgWarning">Warning!</string>
    <string name="msgGPSok">GPS is active</string>
	<string name="msgInicio">For more accurate results, wait until you see your location on the map</string>
	<string name="msgCalculo">Doing the math, take a breath a moment.</string>
	
    <string name="btnOk">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnShare">Share Results</string>
    <string name="btnMapa">Show Route</string>
    <string name="msgWelcome">Welcome to Virtual Trainning Assistant</string>
    <string name="msgStart">Starting your activity</string>
    <string name="msgPause">You have temporarily stopped your activity</string>
	<string name="msgStop">Congratulations! You just completed your training</string>
	<string name="msgCourage">Courage! Let\'s go!</string>

		
</resources>
