<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondosilueta"
    android:gravity="center_horizontal"
    tools:context=".ResultsActivity" >

<LinearLayout 
    android:id="@+id/LLayout0"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    >    
    <LinearLayout 
        android:id="@+id/LLayout01"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="260dp"
    	
		>

    	<LinearLayout 
        	android:id="@+id/LLayout1"
        	android:layout_width="wrap_content"
        	android:layout_height="35dp"
    		>
  			<TextView
    		    android:id="@+id/txtViewHola"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="#000000"
        		android:textSize="20sp"
        		android:paddingRight="3dp"
        		android:text="@string/txtViewHola" />
        
	    	<TextView
    		    android:id="@+id/txtViewNombre"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
	        	android:textSize="20sp"
    	    	android:textColor="#000000"
        		android:text="Nombre1" />
        </LinearLayout>
        
	    <LinearLayout 
    	    android:id="@+id/LLayout2"
        	android:layout_width="fill_parent"
        	android:layout_height="32dp"
        	android:layout_below="@id/LLayout1"
	    	android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
    		android:paddingTop="@dimen/activity_vertical_margin"
    		android:orientation="horizontal"
			>
			<TextView
    		    android:id="@+id/txtViewlblTiempo"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
	        	android:textColor="#000000"
    	    	android:textSize="18sp"
    	    	android:paddingRight="3dp"
        		android:text="@string/txtViewTiempo" />
	    	<TextView
    		    android:id="@+id/txtViewTiempo"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
	        	android:textSize="18sp"
    	    	android:textColor="#000000"
        		android:text="00:00.00" />
    	</LinearLayout>

   		<LinearLayout 
        	android:id="@+id/LLayout3"
        	android:layout_width="fill_parent"
        	android:layout_height="32dp"
        	android:layout_below="@id/LLayout2"
	    	android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
    		android:paddingTop="@dimen/activity_vertical_margin"
    		android:orientation="horizontal"
			>
			<TextView
    		    android:id="@+id/txtViewlblDistancia"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
	        	android:textColor="#000000"
    	    	android:textSize="18sp"
    	    	android:paddingRight="3dp"
        		android:text="@string/txtViewDistRecorrida" />
	    	<TextView
    		    android:id="@+id/txtViewDistRecorrida"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
	        	android:textSize="18sp"
	        	android:paddingRight="3dp"
    	    	android:textColor="#000000"
        		android:text="0.00" />
	    	<TextView
    		    android:id="@+id/txtViewUnidLong"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
	        	android:textSize="18sp"
    	    	android:textColor="#000000"
        		android:text="@string/txtViewUnidLongitud" />
    	</LinearLayout>


		<LinearLayout 
    	    android:id="@+id/LLayout4"
        	android:layout_width="fill_parent"
	        android:layout_height="32dp"
    	    android:layout_below="@id/LLayout3"
	    	android:paddingLeft="@dimen/activity_horizontal_margin"
	    	android:paddingRight="@dimen/activity_horizontal_margin"
    		android:paddingTop="@dimen/activity_vertical_margin"
    		android:orientation="horizontal"
			>
			<TextView
    		    android:id="@+id/txtViewlblCalorias"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
	        	android:textColor="#000000"
    	    	android:textSize="18sp"
    	    	android:paddingRight="3dp"
        		android:text="@string/txtViewCalQuemadas" />
	    	<TextView
    		    android:id="@+id/txtViewCalorias"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
	        	android:textSize="18sp"
    	    	android:textColor="#000000"
        		android:text="0.00KCal" />
       
	    </LinearLayout>

		<LinearLayout 
        	android:id="@+id/LLayout5"
	        android:layout_width="fill_parent"
    	    android:layout_height="32dp"
        	android:layout_below="@id/LLayout4"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
    		android:paddingTop="@dimen/activity_vertical_margin"
	    	android:orientation="horizontal"
			>
			<TextView
    		    android:id="@+id/txtViewlblFrecuencia"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
		       	android:textColor="#000000"
		       	android:paddingRight="3dp"
        		android:textSize="18sp"
        		android:text="@string/txtViewFrecOptima" />
	    	<TextView
    		    android:id="@+id/txtViewFrecOptima"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
	        	android:textSize="18sp"
    	    	android:textColor="#000000"
        		android:text="0ppm" />
	    </LinearLayout>
    </LinearLayout>
            
    <LinearLayout 
        android:id="@+id/LLayout02"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
	
        
    </LinearLayout>
    
</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/PlotLayout"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/LLayout0"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:orientation="horizontal"
	    >
	    <com.androidplot.xy.XYPlot
    		android:id="@+id/PlotResult"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:background="#BBBBBB"
	    	title="@string/txtGrafVelocidad"/>
	    
	</LinearLayout>
	
        		<Button
	    			android:id="@+id/btnShare"
		    		android:layout_width="150dp"
		    		android:layout_height="wrap_content"
	    			android:textAlignment="center"
					android:layout_alignParentBottom="true"
					android:layout_centerHorizontal="true"
	    			android:drawableTop="@drawable/ic_action_share"
	    			android:text="@string/btnShare" />
	

</RelativeLayout>
