<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" 
    android:background="@drawable/fondosilueta">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/barrabotones"
        android:layout_marginLeft="22dp"
        android:orientation="horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp" >

        </TableRow>

        <TableRow
            android:id="@+id/tableRowNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp" >

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:textColor="#000000"
                    android:text="@string/txtViewNombre" />

                <EditText
                    android:id="@+id/eTextAjustActNombre"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/Peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewPeso"
                    android:textColor="#000000"
                    android:paddingRight="10dp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/eTextAjustActPeso"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" >

                    
                </EditText>

                <TextView
                    android:id="@+id/kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/txtViewUnidPeso"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowEstatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/estatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:paddingRight="10dp"
                    android:text="@string/txtViewEstatura"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/eTextAjustActEstatura"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:ems="10" />

                <TextView
                    android:id="@+id/m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:text="@string/txtViewUnidLongitud"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/edad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewEdad"
                    android:textColor="#000000"
                    android:paddingRight="10dp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/eTextAjustActEdad"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:textColor="#000000"/>
                
                </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowFrecuencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:paddingBottom="30dp" >

                <TextView
                    android:id="@+id/Frecuencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewPulso"
                    android:textColor="#000000"
                    android:paddingRight="10dp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/eTextPulso"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:textColor="#000000"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/ppm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:text="ppm"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                
                </LinearLayout>

        </TableRow>

        
        <TableRow
            android:id="@+id/tableRowActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp" >

                <TextView
                    android:id="@+id/actividad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:textColor="#000000"
                    android:text="@string/txtViewActividad" />

                <Spinner
                    android:id="@+id/spnAjustActTipoAct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </TableRow>

    </TableLayout>
<LinearLayout
        android:id="@+id/barrabotones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnAjustActTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:background="@drawable/boton_men_play"
            android:onClick="launchTranningActivity"
            android:text="" />

        <Button
            android:id="@+id/btnAjustActResum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_men_res"
            android:onClick="launchResumeActivity"
            android:text="" />

        <Button
            android:id="@+id/btnAjustActSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_men_ajus_activ"
            android:text="" />
    </LinearLayout>
</RelativeLayout>
