<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:layout_marginBottom="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/fondosilueta"
    android:gravity="center_horizontal"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/barrabotones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:gravity="center" 
        >

        <Button
            android:id="@+id/btnTrainActTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:background="@drawable/boton_men_play_activ"
            android:text="" />

        <Button
            android:id="@+id/btnTrainActResum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_men_res"
            android:onClick="launchResumeActivity"
            android:text="" />

        <Button
            android:id="@+id/btnTrainActAjust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="launchSettingActivity"
            android:background="@drawable/boton_men_ajus"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_above="@+id/barrabotones"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical" >
        
		<LinearLayout
		    android:id="@+id/linearLayout11"
		    android:layout_width="90dp"
		    android:layout_height="fill_parent"
		    android:orientation="vertical">
        	<Button
            	android:id="@+id/btnTrainActStart"
	            android:layout_width="70dp"
    	        android:layout_height="70dp"
        	    android:layout_marginLeft="10dp"
        	    android:layout_marginTop="25dp"
            	android:onClick="onClick"
            	android:background="@drawable/boton_grande1" />

         	<Button
	            android:id="@+id/btnTrainActPause"
    	        android:layout_width="70dp"
        	    android:layout_height="70dp"
            	android:layout_marginLeft="10dp"
            	android:layout_marginTop="20dp"
	            android:onClick="onClick"
	            android:background="@drawable/boton_grande2"
        	     />
		</LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <fragment
                android:id="@+id/fragment1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                class="com.google.android.gms.maps.MapFragment"
                android:name="com.google.android.gms.maps.MapFragment"  />

        </LinearLayout>
         
         
     </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="10dp"
            > <!-- suprimido android:background="#FFFFFF"  -->

            <TableRow
                android:id="@+id/Fila0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/Duracion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="3sp"
                    android:text="@string/txtViewDuracion"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/noUsar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="         "
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF" />

            </TableRow>

            <TableRow
                android:id="@+id/Fila1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Chronometer
                    android:id="@+id/chronometer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timerVal"
                    android:textColor="#256"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
              
            </TableRow>

            <TableRow
                android:id="@+id/Separador1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent" >

                <FrameLayout
                    android:id="@+id/LineaSeparacion1"
                    android:layout_width="fill_parent"
                    android:layout_height="2sp"
                    android:layout_span="12"
                    android:background="#000000" >
                </FrameLayout>
            </TableRow>

            <TableRow
                android:id="@+id/Fila2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </TableRow>

            <TextView
                android:id="@+id/Distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="3sp"
                android:text="@string/txtViewDistancia"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TableRow
                android:id="@+id/Fila3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tViewTrainActDist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="22sp" />

            </TableRow>

            <TableRow
                android:id="@+id/Separador2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <FrameLayout
                    android:id="@+id/LineaSeparacion3"
                    android:layout_width="fill_parent"
                    android:layout_height="2sp"
                    android:layout_span="5"
                    android:background="#000000" >
                </FrameLayout>
            </TableRow>

            <TableRow
                android:id="@+id/Fila4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/Actividad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="3sp"
                    android:text="@string/txtViewActividad"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/Fila5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tViewTrainActAct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="22sp" />
            </TableRow>

            <TableRow
                android:id="@+id/Separador3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <FrameLayout
                    android:id="@+id/LineaSeparacion4"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_span="5"
                    android:background="#000000" >
                </FrameLayout>
            </TableRow>
            
            <TableRow
                android:id="@+id/Fila6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/Velocidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3sp"
                    android:text="@string/txtVelocidad"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/Fila7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                >

                <TextView
                    android:id="@+id/tViewTrainActVeloc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="22sp" />

            </TableRow>
            
            <TableRow
                android:id="@+id/Separador4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <FrameLayout
                    android:id="@+id/LineaSeparacion5"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_span="5"
                    android:background="#000000" >
                </FrameLayout>
            </TableRow>
            
         </TableLayout>

        <ImageView
            android:id="@+id/imageCronometro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/tableLayout1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15sp"
            android:src="@drawable/cronometro2" />

        <ImageView
            android:id="@+id/imageRegla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageCronometro"
            android:layout_below="@+id/imageCronometro"
            android:layout_marginTop="26sp"
            android:src="@drawable/regla" />

        <ImageView
            android:id="@+id/imageActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageRegla"
            android:layout_below="@+id/imageRegla"
            android:layout_marginTop="30sp"
            android:src="@drawable/actividad" />

        <ImageView
            android:id="@+id/imageSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageActividad"
            android:layout_below="@+id/imageActividad"
            android:layout_marginTop="35sp"
            android:src="@drawable/speed" />

  </RelativeLayout>

</RelativeLayout>